<resources>
    <string name="app_name">Exhibition Hall</string>
    <string name="nav_header_title">" Exhibition Hall Application"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_header_subtitle">" "</string>
    <string name="pref_segurity">Segurity</string>
    <string name="pref_password_label">Password :</string>
    <string name="logging_new_account">New Account</string>
    <string name="logging_button_text">Login</string>
    <string name="logging_image_description">Logging Image</string>
    <string name="pref_password_text">Password</string>
    <string name="pref_password_new_label">New Password :</string>
    <string name="logging_registre_button_text">Sign in</string>
    <string name="pref_password_confirm_label">Confirm Password :</string>
    <string name="login_error_password">Incorrect password, try it again.</string>
    <string name="login_error_confirmation_password">The password entered does not match the password confirmation.</string>
    <string name="obligatory_field_text">*</string>
    <string name="login_error_password_is_empty">The Password field its Empty.</string>
    <string name="pref_show_password">Show</string>
    <string name="pref_edit_password">Edit Password</string>
    <string name="pref_edit_password_old_message">"Old Password "</string>
    <string name="pref_edit_password_new_message">New Password</string>
    <string name="pref_edit_password_confirm_message">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="expose_id_text">Expose in</string>
    <string name="comment_id_text">Posted a comment for the exhibit</string>
    <string name="image_not_found">Image Not Found</string>
    <string name="menu_exhibitions">Exhibitions</string>
    <string name="field_exhibition_id">Exhibition ID</string>
    <string name="field_exhibition_name">Exhibition Name</string>
    <string name="field_exhibition_description">Desciption</string>
    <string name="field_exhibition_fech_ini">Start date</string>
    <string name="field_exhibition_fech_fin">End date</string>
    <string name="field_artist_dni">DNI or Passport</string>
    <string name="field_artist_name">Name</string>
    <string name="field_artist_dirrection">Address</string>
    <string name="field_artist_town">Town</string>
    <string name="field_artist_province">Province</string>
    <string name="field_artist_country">Country</string>
    <string name="field_artist_tlf_job">Work phone</string>
    <string name="field_artist_tlf_personal">Personal phone</string>
    <string name="field_artist_tlf_landline">Landline</string>
    <string name="field_artist_email">Email</string>
    <string name="field_artist_webblog">WebBlog</string>
    <string name="field_artist_fech_naci">Birth date</string>
    <string name="field_id_exhibition">Exhibition</string>
    <string name="field_dni_artist">Artist</string>
    <string name="field_work_name">Work name</string>
    <string name="field_work_description">Description</string>
    <string name="field_work_size">Size</string>
    <string name="field_work_weight">Weight</string>
    <string name="field_work_photo">Photo</string>
    <string name="field_comments_commentary">Commentary</string>
    <string name="photo_search_in_my_gallery">Search in Gallery</string>
    <string name="work_photo_image_desc">Choose a photo for this work</string>
    <string name="field_comment_put_here">Put here your commentary</string>
    <string name="field_name_work">Work</string>
    <string name="spinner_nothing_selected">Nothing Selected</string>
    <string name="spinner_image_desc">Spinner Item Image</string>
    <string name="field_error_message_edittext">"Fill in the "</string>
    <string name="invalid_message">Invalid</string>
    <string name="invalid_number_message">Invalid Number</string>
    <string name="invalid_string_message">Invalid Value</string>
    <string name="invalid_date_message">Invalid Date</string>
    <string name="list_exhibitions">Exhibition Lists</string>
    <string name="delete_option">Delete</string>
    <string name="modify_option">Edit</string>
    <string name="exhibition_title">Exhibition</string>
    <string name="welcome">Welcome to \nThe Exhibition Hall</string>
    <string name="artist_tittle">Artist</string>
    <string name="commentary_title">Commentary</string>
    <string name="work_title">Works</string>
    <string name="what_do_you_want">What do you want to do?\nquick access to the creation of</string>
    <string name="you_can_too">You can also visit all our \ncontent through</string>
    <string name="artist_list">List of Artists</string>
    <string name="comments_list">List of Commentaries</string>
    <string name="on_delete_dialog_tittle">"Are you sure you want to delete "</string>
    <string name="on_db_operations_error">We had a problem saving data, please try again later</string>
    <string name="on_db_deleting_error">We had a problem deleting data, please try again later</string>
    <string name="artista_email_lbl" translatable="false">Email :</string>
    <string name="artista_weburl_lbl" translatable="false">WebBlog  :</string>
    <string name="artista_dni_label" translatable="false">DNI / Pas  :</string>
    <string name="artista_fech_nac_lbl">Birth date :</string>
    <string name="artista_address_lbl">Address :</string>
    <string name="artista_province_lbl">Province :</string>
    <string name="artista_country_lbl">Country :</string>
    <string name="artista_town_lbl">Town :</string>
    <string name="new_commentary">New Commentary</string>
    <string name="spinner_select_exhibition">Select a Exhibition.</string>
    <string name="spinner_select_work">Select a Work.</string>
    <string name="select_something">"Select a/n "</string>
    <string name="spinner_select_artist">Select an Artist</string>
    <string name="error_io_operations">An error occurred, try again later</string>
    <string name="happy_birthday">HAPPY BIRTHDAY</string>
    <string name="not_birthday">It is not yet the birthday of this artist.</string>
    <string name="call_messaje">Callyou\'re going to call a contact, are you sure?</string>
    <string name="call_tittle">Calling</string>
    <string name="add_artist_to_exhibition">Add Artist</string>
    <string name="exhibits_list">Exhibits</string>
    <string name="list_has_artist">This artist is already participating in the exhibition</string>
    <string name="new_exhibitions">New Exhibitions</string>
    <string name="new_artist">New Artist</string>
    <string name="new_work">New Work</string>
    <string name="comments">Comments</string>
    <string name="works_title">Work</string>
    <string name="work_list">Works List</string>
    <string name="cant_delete">"You Cant delete one "</string>
    <string name="that_has">"if it is associated with one "</string>
    <string name="or">Or</string>
</resources>