<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/menu_home"
        android:orderInCategory="97"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_artists_fragment"
        android:icon="@drawable/app_artist"
        android:orderInCategory="98"
        android:title="@string/menu_artists"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_exhibitions_fragment"
        android:icon="@drawable/app_exhibition"
        android:orderInCategory="99"
        android:title="@string/menu_exhibitions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>