<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creation.ArtistasCreationFragment">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="12dp"
        android:scrollbarStyle="outsideOverlay">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_artist_dni"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_dni"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_artist_name"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_address"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_dirrection"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_town"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_town"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_province"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_province"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_country"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_country"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_work_phone"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_tlf_job"
                    android:importantForAutofill="no"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_personal_phone"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_tlf_personal"
                    android:importantForAutofill="no"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_landline_phone"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_tlf_landline"
                    android:importantForAutofill="no"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_email"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_webblog"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_webblog"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="100" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/model_fech_nac"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/field_artist_fech_naci"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/confirm_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/confirm" />

                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/cancel" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>