<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/pref_edit_password_old_message"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/pref_edit_password_new_message"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_old_password"
        app:layout_constraintStart_toStartOf="@+id/edit_old_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_old_password" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/pref_edit_password_confirm_message"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_new_password"
        app:layout_constraintStart_toStartOf="@+id/edit_new_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>